Wed Dec 22 13:21:12 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay, index mode now kinda takes into account the height of the
	font you use. Width is on its way, but is more tricky.

Wed Dec 22 02:17:01 1999  Michael Jennings <mej@eterm.org>

	* Removed a warning, and added "make testclean"

Tue Dec 21 23:28:20 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* More modify.c submissions from Andrew, and some initial menu
	work. The menus are not compiled in right now, and would core if I
	did, so don't touch 'em for now :) They are only 5 mins work atm.
	* I have #ifdef'ed out the code which uses X86VidMode extensions
	until I can find out how common it is not to have them :)

Tue Dec 21 18:40:39 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* The winwidget_rerender_image() function now checks for changed
	dimensions and acts accordingly, and the rotate() function now
	updates the width and height attributes. The modify.c functions
	are now available for testing using 1-9, 0, -, = key presses.

Tue Dec 21 18:01:15 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Encorporated modify.c, contributed by Andrew Glover
	<aglover@axe.net>. These functions wrap imlib2 modification
	functions, and will be handy when I make some menus :) We'll be
	able to do scaling, tiling, color modifiers, and more.

Tue Dec 21 03:28:30 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* And now the thing won't go mad when you hold down a change-slide
	button in Slideshow mode... Before it stored *all* the KeyPresses
	and responded to *all* of them. Hehe. It was fun watching it go
	round though :)

Mon Dec 20 17:35:25 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Hehe. Ooops. I only need to blend on zoom if the image *has* an
	alpha channel. Hehe. Ok, now zooming is *much* faster and
	smoother, and I am slightly less of an idiot.

Mon Dec 20 16:46:58 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>
